Fixes horizontal scroll.

--- a/source/stylesheets/blocks/_intro.scss
+++ b/source/stylesheets/blocks/_intro.scss
@@ -3,6 +3,8 @@
   color: $c-fore-very-light;
   position: relative;
   min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 
   > .wrapper {
     padding: 80px 50px 40px 50px;
